--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="markdown custom container to display content in tabs">
     
     
-    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.ca52d4c2.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.214c1cd9.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/5.b5df6c40.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/3.0907f29d.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.32fe826e.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/4.4c897eb2.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.54015bcb.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/7.4450043f.js">
-    <link rel="stylesheet" href="/vuepress-plugin-tabs/assets/css/0.styles.ca52d4c2.css">
+    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.f88a1ba1.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.f261cb00.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/5.b5df6c40.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/3.0907f29d.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.32fe826e.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/4.4c897eb2.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.54015bcb.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/7.4450043f.js">
+    <link rel="stylesheet" href="/vuepress-plugin-tabs/assets/css/0.styles.f88a1ba1.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"><!----></div></div>
-    <script src="/vuepress-plugin-tabs/assets/js/app.214c1cd9.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/5.b5df6c40.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/3.0907f29d.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"><!----></div></div>
+    <script src="/vuepress-plugin-tabs/assets/js/app.f261cb00.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/5.b5df6c40.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/3.0907f29d.js" defer></script>
   </body>
 </html>
