--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>@superbiger/vuepress-plugin-tabs</title>
+    <title>vuepress-plugin-element-tabs</title>
     <meta name="description" content="markdown custom container to display content in tabs">
     
     
-    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.278c5ff6.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.549f45b0.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/5.b5df6c40.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/3.0907f29d.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.32fe826e.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/4.4c897eb2.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.3e9f8505.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/7.4450043f.js">
+    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.278c5ff6.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.42f93c06.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/5.b5df6c40.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/3.0907f29d.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.32fe826e.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/4.4c897eb2.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.3e9f8505.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/7.4450043f.js">
     <link rel="stylesheet" href="/vuepress-plugin-tabs/assets/css/0.styles.278c5ff6.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"><!----></div></div>
-    <script src="/vuepress-plugin-tabs/assets/js/app.549f45b0.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/5.b5df6c40.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/3.0907f29d.js" defer></script>
+    <script src="/vuepress-plugin-tabs/assets/js/app.42f93c06.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/5.b5df6c40.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/3.0907f29d.js" defer></script>
   </body>
 </html>
