--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="markdown custom container to display content in tabs">
     
     
-    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.998088de.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.6117e97f.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/5.b5df6c40.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/3.0907f29d.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.32fe826e.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/4.4c897eb2.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.57d25471.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/7.4450043f.js">
-    <link rel="stylesheet" href="/vuepress-plugin-tabs/assets/css/0.styles.998088de.css">
+    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.f893263b.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.11eb40c6.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/4.3c8e6185.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.8e2d35b9.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/3.22cac7d1.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/5.d23602fb.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.97323c41.js">
+    <link rel="stylesheet" href="/vuepress-plugin-tabs/assets/css/0.styles.f893263b.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"><!----></div></div>
-    <script src="/vuepress-plugin-tabs/assets/js/app.6117e97f.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/5.b5df6c40.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/3.0907f29d.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-tabs/assets/js/app.11eb40c6.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/4.3c8e6185.js" defer></script>
   </body>
 </html>
