--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="markdown custom container to display content in tabs">
     
     
-    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.10e41471.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.ad887538.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/4.c556b86b.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.7640edfa.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/3.dab73c82.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/5.210e83ce.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.97323c41.js">
-    <link rel="stylesheet" href="/vuepress-plugin-tabs/assets/css/0.styles.10e41471.css">
+    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.f9399027.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.6cf17bd8.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/4.d44584da.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.64110c80.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/3.54fc75b0.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/5.614318df.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.cf406887.js">
+    <link rel="stylesheet" href="/vuepress-plugin-tabs/assets/css/0.styles.f9399027.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-tabs/assets/js/app.ad887538.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/4.c556b86b.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-tabs/assets/js/app.6cf17bd8.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/4.d44584da.js" defer></script>
   </body>
 </html>
