--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>vuepress-plugin-element-tabs</title>
+    <title>element-tabs</title>
     <meta name="description" content="markdown custom container to display content in tabs">
     
     
-    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.f9399027.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.6cf17bd8.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/4.d44584da.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.64110c80.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/3.54fc75b0.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/5.614318df.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.cf406887.js">
+    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.f9399027.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.c4d3b5b4.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/4.d44584da.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.64110c80.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/3.54fc75b0.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/5.614318df.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.cf406887.js">
     <link rel="stylesheet" href="/vuepress-plugin-tabs/assets/css/0.styles.f9399027.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-tabs/assets/js/app.6cf17bd8.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/4.d44584da.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-tabs/assets/js/app.c4d3b5b4.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/4.d44584da.js" defer></script>
   </body>
 </html>
