--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="markdown custom container to display content in tabs">
     
     
-    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.4fa0f89d.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.177ef925.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/4.3ff2fe10.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.ddec24e9.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/3.7380f92c.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/5.c77611d3.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.f136f14e.js">
-    <link rel="stylesheet" href="/vuepress-plugin-tabs/assets/css/0.styles.4fa0f89d.css">
+    <link rel="preload" href="/vuepress-plugin-tabs/assets/css/0.styles.07752ade.css" as="style"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/app.2181c12f.js" as="script"><link rel="preload" href="/vuepress-plugin-tabs/assets/js/4.14b8e0c4.js" as="script"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/2.43c75938.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/3.9a06d958.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/5.81032ff6.js"><link rel="prefetch" href="/vuepress-plugin-tabs/assets/js/6.621ff7a3.js">
+    <link rel="stylesheet" href="/vuepress-plugin-tabs/assets/css/0.styles.07752ade.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-tabs/assets/js/app.177ef925.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/4.3ff2fe10.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-tabs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-tabs/assets/js/app.2181c12f.js" defer></script><script src="/vuepress-plugin-tabs/assets/js/4.14b8e0c4.js" defer></script>
   </body>
 </html>
